--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,5 +1,7 @@
 {% extends 'app/base.html' %}
+{% load static %}
 {% block start %}
+        <body style="background-image: url({% static '/img/login.png' %});background-repeat: round;background-size: cover;background-attachment: fixed;opacity: 0.7;">
     <div class="container mt-5 pt-5 col-6">
         <form method="POST">
             {% csrf_token %}
@@ -13,11 +15,9 @@
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1">
             </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
+        </body>
 {% endblock %}
