--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -1,5 +1,6 @@
-	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
+<!DOCTYPE html>
+<html lang="zxx" class="no-js">
+{% load static %}
 	<head>
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,21 +16,19 @@
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>Travel</title>
-
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/jquery-ui.css">				
-			<link rel="stylesheet" href="css/nice-select.css">							
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">				
-			<link rel="stylesheet" href="css/main.css">
-		</head>
+          {% block start %}
+        <link href="{% static 'css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/linearicons.css' %}" rel="stylesheet">
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jquery-ui.css' %}" rel="stylesheet">
+    <link href="{% static 'css/nice-select.css' %}" rel="stylesheet">
+    <link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+	{% endblock %}
+    </head>
 		<body>	
 			<header id="header">
 				<div class="header-top">
@@ -82,6 +81,7 @@
 				            </ul>
 				          </li>					          					          		          
 				          <li><a href="contact.html">Contact</a></li>
+                             <li><a href="{% url 'app:logout' %}">Logout</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->					      		  
 					</div>
@@ -123,7 +123,7 @@
 								</div>
 								<div class="details">
 									<h4 class="d-flex justify-content-between">
-										<span>Hilton Star Hotel</span>                              	
+										<span>Hampton Inn</span>
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -133,7 +133,7 @@
 										</div>	
 									</h4>
 									<p>
-										View on map   |   49 Reviews
+										View on map   |   39 Reviews
 									</p>
 									<ul class="package-list">
 										<li class="d-flex justify-content-between align-items-center">
@@ -227,7 +227,7 @@
 								</div>
 								<div class="details">
 									<h4 class="d-flex justify-content-between">
-										<span>Hilton Star Hotel</span>                              	
+										<span>Hotel Seneca Niagara </span>
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -237,7 +237,7 @@
 										</div>	
 									</h4>
 									<p>
-										View on map   |   49 Reviews
+										View on map   |   23 Reviews
 									</p>
 									<ul class="package-list">
 										<li class="d-flex justify-content-between align-items-center">
@@ -279,7 +279,7 @@
 								</div>
 								<div class="details">
 									<h4 class="d-flex justify-content-between">
-										<span>Hilton Star Hotel</span>                              	
+										<span>Crown Plaza</span>
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -331,7 +331,7 @@
 								</div>
 								<div class="details">
 									<h4 class="d-flex justify-content-between">
-										<span>Hilton Star Hotel</span>                              	
+										<span>Courtyard by Mariott</span>
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -341,7 +341,7 @@
 										</div>	
 									</h4>
 									<p>
-										View on map   |   49 Reviews
+										View on map   |   120 Reviews
 									</p>
 									<ul class="package-list">
 										<li class="d-flex justify-content-between align-items-center">
@@ -383,7 +383,7 @@
 								</div>
 								<div class="details">
 									<h4 class="d-flex justify-content-between">
-										<span>Hilton Star Hotel</span>                              	
+										<span>The Oaks Hotel</span>
 										<div class="star">
 											<span class="fa fa-star checked"></span>
 											<span class="fa fa-star checked"></span>
@@ -393,7 +393,7 @@
 										</div>	
 									</h4>
 									<p>
-										View on map   |   49 Reviews
+										View on map   |   58 Reviews
 									</p>
 									<ul class="package-list">
 										<li class="d-flex justify-content-between align-items-center">
