--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -34,83 +34,69 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 </head>
 <body>
-
+<head>
     <!-- Mobile Specific Meta -->
-{#    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">#}
-{#    <!-- Favicon-->#}
-{#    <link rel="shortcut icon" href="/staticfiles/img/fav.png">#}
-{#    <!-- Author Meta -->#}
-{#    <meta name="author" content="colorlib">#}
-{#    <!-- Meta Description -->#}
-{#    <meta name="description" content="">#}
-{#    <!-- Meta Keyword -->#}
-{#    <meta name="keywords" content="">#}
-{#    <!-- meta character set -->#}
-{#    <meta charset="UTF-8">#}
-{#    <!-- Site Title -->#}
-{#    <title>Travel</title>#}
-{#    <header id="header">#}
-{#        <div class="header-top">#}
-{#            <div class="container">#}
-{#                <div class="row align-items-center">#}
-{#                    <div class="col-lg-6 col-sm-6 col-6 header-top-left">#}
-{#                        <ul>#}
-{#                            <li><a href="#">Visit Us</a></li>#}
-{#                            <li><a href="#">Buy Tickets</a></li>#}
-{#                        </ul>#}
-{#                    </div>#}
-{#                    <div class="col-lg-6 col-sm-6 col-6 header-top-right">#}
-{#                        <div class="header-social">#}
-{#                            <a href="#"><i class="fa fa-facebook"></i></a>#}
-{#                            <a href="#"><i class="fa fa-twitter"></i></a>#}
-{#                            <a href="#"><i class="fa fa-dribbble"></i></a>#}
-{#                            <a href="#"><i class="fa fa-behance"></i></a>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="container main-menu">#}
-{#            <div class="row align-items-center justify-content-between d-flex">#}
-{#                <div id="logo">#}
-{#                    <a href="index.html"><img src="/staticfiles/img/logo.png" alt="" title=""/></a>#}
-{#                </div>#}
-{#                <nav id="nav-menu-container">#}
-{#                    <ul class="nav-menu">#}
-{#                        <li><a href="index.html">Home</a></li>#}
-{#                        <li><a href="{% url 'app:about' %}">About</a></li>#}
-{#                        <li><a href="packages.html">Packages</a></li>#}
-{#                        <li><a href="hotels.html">Hotels</a></li>#}
-{#                        <li><a href="insurance.html">Insurence</a></li>#}
-{#                        <li class="menu-has-children"><a href="">Blog</a>#}
-{#                            <ul>#}
-{#                                <li><a href="blog-home.html">Blog Home</a></li>#}
-{#                                <li><a href="blog-single.html">Blog Single</a></li>#}
-{#                            </ul>#}
-{#                        </li>#}
-{#                        <li class="menu-has-children"><a href="">Pages</a>#}
-{#                            <ul>#}
-{#                                <li><a href="elements.html">Elements</a></li>#}
-{#                                <li class="menu-has-children"><a href="">Level 2 </a>#}
-{#                                    <ul>#}
-{#                                        <li><a href="#">Item One</a></li>#}
-{#                                        <li><a href="#">Item Two</a></li>#}
-{#                                    </ul>#}
-{#                                </li>#}
-{#                            </ul>#}
-{#                        </li>#}
-{#                        <li><a href="contact.html">Contact</a></li>#}
-{#                    </ul>#}
-{#                </nav><!-- #nav-menu-container -->#}
-{#            </div>#}
-{#        </div>#}
-{#    </header><!-- #header -->#}
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="/staticfiles/img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="colorlib">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Travel</title>
 
-
+</head>
+<body>
+<header id="header">
+    <div class="header-top">
+        <div class="container">
+            <div class="row align-items-center">
+                <div>
+                    <ul>
+                        <li><a href="#">Visit us</a></li>
+                        <li><a href="#">Buy Tickets</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-sm-6 col-6 header-top-right">
+                    <div class="header-social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container main-menu">
+        <div class="row align-items-center justify-content-between d-flex">
+            <div id="logo">
+                <a href="#" class="text-white" style="font-size: 20px">Traveloholic </a>
+{#                <a href="index.html"><img src="/staticfiles/img/traveloholic.png" height="50px" width="70px" alt="" title=""/></a>#}
+            </div>
+            <nav id="nav-menu-container">
+                <ul class="nav-menu">
+                    <li><a href="{% url 'app:index' %}">Home</a></li>
+                    <li><a href="{% url 'app:about' %}">About</a></li>
+                    <li><a href="{% url 'app:package' %}">Packages</a></li>
+                    <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
+                    <li><a href="{% url 'app:insurance' %}">Insurance</a></li>
+                    <li><a href="{% url 'app:contact' %}">Contact</a></li>
+                </ul>
+            </nav><!-- #nav-menu-container -->
+        </div>
+    </div>
+</header><!-- #header -->
 {% block start %}
-    ****
+    ***
 {% endblock %}
 
+    <!-- start footer Area -->
     <footer class="footer-area section-gap">
         <div class="container">
 
@@ -121,8 +107,7 @@
                         <p>
                             The world has become so fast paced that people don’t want to stand by reading a page of
                             information, they would much rather look at a presentation and understand the message. It
-                            has
-                            come to a point
+                            has come to a point
                         </p>
                     </div>
                 </div>
@@ -192,8 +177,7 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;<script>document.write(new Date().getFullYear());</script>
                     All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                    <a
-                            href="https://colorlib.com" target="_blank">Colorlib</a>
+                    <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                 <div class="col-lg-4 col-sm-12 footer-social">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -204,23 +188,5 @@
             </div>
         </div>
     </footer>
-    <!-- End footer Area -->
-    <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/jquery-ui.js' %}"></script>
-    <script src="{% static 'js/mail-script.js' %}"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
-    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
-    <script src="{% static 'js/superfish.min.js' %}"></script>
-    <script src="{% static 'js/hoverIntent.js' %}"></script>
-    <script src="{% static 'js/easing.min.js' %}"></script>
-    <script src="{% static 'js/jquery-ui.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-
 </body>
 </html>
