--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,13 +1,21 @@
 {% extends 'app/base.html' %}
-{% load static %}
 {% block start %}
-        <body style="background-image: url({% static '/img/login.png' %});background-repeat: round;background-size: cover;background-attachment: fixed;opacity: 0.7;">
-    <div class="container mt-5 pt-5 col-6">
+<div class="banner-area" style="padding: 100px; margin: fill">
+    <div class="relative text-white container">
         <form method="POST">
             {% csrf_token %}
             {% include 'app/messages.html' %}
+            <div class="banner-left" style="text-align: center">
+                <h6 class="text-white">Take some time off your busy life</h6>
+                <h1 class="text-white">Traveloholic</h1>
+                <p class="text-white">
+                    We take care of your travel and do our best to make sure you get the best journey
+                </p>
+                <h3 class="h3 text-white">It's Time To Travel Canada</h3><br><br>
+
+            </div>
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <label for="exampleInputEmail1" class="form-label">Username</label>
                 <input type="text" name="username" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
@@ -15,9 +23,8 @@
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1">
             </div>
-
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Login</button>
         </form>
     </div>
-        </body>
+</div>
 {% endblock %}
