--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,10 +1,96 @@
-{% extends 'app/base.html' %}
-
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 {% load static %}
+<head>
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="/staticfiles/img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="colorlib">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Travel</title>
 
-{% block start %}
+    {% block start %}
+    <link href="{% static 'css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/linearicons.css' %}" rel="stylesheet">
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jquery-ui.css' %}" rel="stylesheet">
+    <link href="{% static 'css/nice-select.css' %}" rel="stylesheet">
+    <link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    {% endblock %}
+</head>
+<body>
+<header id="header">
+    <div class="header-top">
+        <div class="container">
+            <div class="row align-items-center">
+                <div>
+                    <ul>
+                        <li><a href="#">Visit us</a></li>
+                        <li><a href="#">Buy Tickets</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-sm-6 col-6 header-top-right">
+                    <div class="header-social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container main-menu">
+        <div class="row align-items-center justify-content-between d-flex">
+            <div id="logo">
+                <a href="index.html" style="color: aqua;font-size: 20px;font-weight: bolder;">Traveloholic </a>
+{#                <a href="index.html"><img src="/staticfiles/img/traveloholic.png" height="50px" width="70px" alt="" title=""/></a>#}
+            </div>
+            <nav id="nav-menu-container">
+                <ul class="nav-menu">
+                    <li><a href="{% url 'app:index' %}">Home</a></li>
+                    <li><a href="{% url 'app:about' %}">About</a></li>
+                    <li><a href="{% url 'app:package' %}">Packages</a></li>
+                    <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
+                    <li><a href="{% url 'app:insurance' %}">Insurance</a></li>
+                    <li class="menu-has-children"><a href="">Blog</a>
+                        <ul>
+                            <li><a href="{% url 'app:blog-home' %}">Blog Home</a></li>
+                            <li><a href="{% url 'app:blog-single' %}">Blog Single</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-has-children"><a href="">Pages</a>
+                        <ul>
+                            <li><a href="elements.html">Elements</a></li>
+                            <li class="menu-has-children"><a href="">Level 2 </a>
+                                <ul>
+                                    <li><a href="#">Item One</a></li>
+                                    <li><a href="#">Item Two</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">Contact</a></li>
+                     <li><a href="{% url 'app:logout' %}">Logout</a></li>
+                </ul>
+            </nav><!-- #nav-menu-container -->
+        </div>
+    </div>
+
+</header><!-- #header -->
+
 <!-- start banner Area -->
 <section class="banner-area relative">
     <div class="overlay overlay-bg"></div>
@@ -21,6 +107,10 @@
             </div>
             <div class="col-lg-4 col-md-6 banner-right">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab"
+                           aria-controls="flight" aria-selected="true">Flights</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" id="hotel-tab" data-toggle="tab" href="#hotel" role="tab"
                            aria-controls="hotel" aria-selected="false">Hotels</a>
@@ -46,7 +136,25 @@
                                    onblur="this.placeholder = 'Adults '">
                             <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "
                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">
-                            <a href="{% url 'app:hotels' %}" class="primary-btn text-uppercase">Search Hotels</a>
+                            <a href="#" class="primary-btn text-uppercase">Search flights</a>
+                        </form>
+                    </div>
+                    <div class="tab-pane fade" id="hotel" role="tabpanel" aria-labelledby="hotel-tab">
+                        <form class="form-wrap">
+                            <input type="text" class="form-control" name="name" placeholder="From "
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">
+                            <input type="text" class="form-control" name="to" placeholder="To "
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
+                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
+                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
+                            <input type="number" min="1" max="20" class="form-control" name="adults"
+                                   placeholder="Adults " onfocus="this.placeholder = ''"
+                                   onblur="this.placeholder = 'Adults '">
+                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">
+                            <a href="#" class="primary-btn text-uppercase">Search Hotels</a>
                         </form>
                     </div>
                     <div class="tab-pane fade" id="holiday" role="tabpanel" aria-labelledby="holiday-tab">
@@ -91,25 +199,12 @@
                 <div class="single-destination relative">
                     <div class="thumb relative">
                         <div class="overlay overlay-bg"></div>
-                        <img class="img-fluid" src="/staticfiles/img/d1.jpg" alt="">
-                    </div>
-                    <div class="desc">
-                        <a href="#" class="price-btn">$150</a>
-                        <h4>Mountain River</h4>
-                        <p>Paraguay</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-destination relative">
-                    <div class="thumb relative">
-                        <div class="overlay overlay-bg"></div>
-                        <img class="img-fluid" src="/staticfiles/img/d2.jpg" alt="">
+                        <img class="img-fluid" src="/staticfiles/img/niagara.jpg" alt="">
                     </div>
                     <div class="desc">
                         <a href="#" class="price-btn">$250</a>
-                        <h4>Dream City</h4>
-                        <p>Paris</p>
+                        <h4>Niagara Falls</h4>
+                        <p>Niagara</p>
                     </div>
                 </div>
             </div>
@@ -117,12 +212,25 @@
                 <div class="single-destination relative">
                     <div class="thumb relative">
                         <div class="overlay overlay-bg"></div>
-                        <img class="img-fluid" src="/staticfiles/img/d3.jpg" alt="">
+                        <img class="img-fluid" src="/staticfiles/img/tobermory.jpg" alt="">
                     </div>
                     <div class="desc">
-                        <a href="#" class="price-btn">$350</a>
-                        <h4>Cloud Mountain</h4>
-                        <p>Sri Lanka</p>
+                        <a href="#" class="price-btn">$150</a>
+                        <h4>Tobermory</h4>
+                        <p>Ontario</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="single-destination relative">
+                    <div class="thumb relative">
+                        <div class="overlay overlay-bg"></div>
+                        <img class="img-fluid" src="/staticfiles/img/banff.jpg" alt="">
+                    </div>
+                    <div class="desc">
+                        <a href="#" class="price-btn">$500</a>
+                        <h4>Banff</h4>
+                        <p>Alberta</p>
                     </div>
                 </div>
             </div>
@@ -633,6 +741,114 @@
 </section>
 <!-- End recent-blog Area -->
 
-{% endblock %}
+<!-- start footer Area -->
+<footer class="footer-area section-gap">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-3  col-md-6 col-sm-6">
+                <div class="single-footer-widget">
+                    <h6>About Agency</h6>
+                    <p>
+                        The world has become so fast paced that people don’t want to stand by reading a page of
+                        information, they would much rather look at a presentation and understand the message. It has
+                        come to a point
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="single-footer-widget">
+                    <h6>Navigation Links</h6>
+                    <div class="row">
+                        <div class="col">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Feature</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Portfolio</a></li>
+                            </ul>
+                        </div>
+                        <div class="col">
+                            <ul>
+                                <li><a href="#">Team</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  col-md-6 col-sm-6">
+                <div class="single-footer-widget">
+                    <h6>Newsletter</h6>
+                    <p>
+                        For business professionals caught between high OEM price and mediocre print and graphic output.
+                    </p>
+                    <div id="mc_embed_signup">
+                        <form target="_blank"
+                              action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                              method="get" class="subscription relative">
+                            <div class="input-group d-flex flex-row">
+                                <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
+                                       onblur="this.placeholder = 'Email Address '" required="" type="email">
+                                <button class="btn bb-btn"><span class="lnr lnr-location"></span></button>
+                            </div>
+                            <div class="mt-10 info"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  col-md-6 col-sm-6">
+                <div class="single-footer-widget mail-chimp">
+                    <h6 class="mb-20">InstaFeed</h6>
+                    <ul class="instafeed d-flex flex-wrap">
+                        <li><img src="/staticfiles/img/i1.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i2.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i3.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i4.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i5.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i6.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i7.jpg" alt=""></li>
+                        <li><img src="/staticfiles/img/i8.jpg" alt=""></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="row footer-bottom d-flex justify-content-between align-items-center">
+            <p class="col-lg-8 col-sm-12 footer-text m-0">
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                    href="https://colorlib.com" target="_blank">Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <div class="col-lg-4 col-sm-12 footer-social">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-dribbble"></i></a>
+                <a href="#"><i class="fa fa-behance"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- End footer Area -->
+<script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery-ui.js' %}"></script>
+<script src="{% static 'js/mail-script.js' %}"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+<script src="{% static 'js/superfish.min.js' %}"></script>
+<script src="{% static 'js/hoverIntent.js' %}"></script>
+<script src="{% static 'js/easing.min.js' %}"></script>
+<script src="{% static 'js/jquery-ui.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+
 </body>
 </html>
