logout functionality added.

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -66,10 +66,10 @@
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
                     <li><a href="{% url 'app:insurance' %}">Insurance</a></li>
                     <li class="menu-has-children"><a href="">Blog</a>
-                        <ul>
-                            <li><a href="{% url 'app:blog-home' %}">Blog Home</a></li>
-                            <li><a href="{% url 'app:blog-single' %}">Blog Single</a></li>
-                        </ul>
+{#                        <ul>#}
+{#                            <li><a href="{% url 'app:blog-home'  %}">Blog Home</a></li>#}
+{#                            <li><a href="{% url 'app:blog-single' %}">Blog Single</a></li>#}
+{#                        </ul>#}
                     </li>
                     <li class="menu-has-children"><a href="">Pages</a>
                         <ul>
