--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,5 +1,13 @@
 {% extends 'app/base.html' %}
 {% block start %}
+
+<head>
+    <style>
+        #header {
+    display: none !important;
+}
+    </style>
+</head>
 <div class="banner-area" style="padding: 100px; margin: fill">
     <div class="relative text-white container">
         <form method="POST">
