--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -2378,8 +2378,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .primary-btn {
-  background: #f8b600;
-  line-height: 42px;
+  background: #24248e;
+  line-height: 36px;
   padding-left: 30px;
   padding-right: 30px;
   border: none;
@@ -2412,15 +2412,20 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 0.3s ease 0s;
 }
 
-.primary-btn:hover {
-  color: #fff;
-}
+/*.primary-btn:hover {*/
+/*  color: #fff;*/
+/*}*/
 
-.primary-btn:hover span {
-  color: #fff;
-  right: 20px;
+/*.primary-btn:hover span {*/
+/*  color: #fff;*/
+/*  right: 20px;*/
+/*}*/
+.primary-btn:hover{
+  background-color: #f8b600;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
 }
-
 .primary-btn.white {
   border: 1px solid #fff;
   color: #fff;
@@ -4496,13 +4501,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #f8b600;
 }
 label.form-label {
-    color: aliceblue;
-    font-weight: 500;
+    color: #24248e;
+    font-weight: 600;
     font-size: 18px;
 }
 div#emailHelp {
     color: white;
-    font-weight: 500;
+    font-weight: 600;
 }
 input#exampleInputEmail1:focus,input#exampleInputPassword1:focus {
     background-color: #abd0f1;
