--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -105,7 +105,7 @@
                 <h3 class="h3 text-white">It's Time To Travel Canada</h3><br><br>
                 <a href="#" class="primary-btn text-uppercase">Get Started</a>
             </div>
-            <div class="col-lg-4 col-md-6 banner-right">
+            <div class="col-lg-4 col-md-6 banner-right" style="margin-top: 120px;">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab"
