payment module added

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -85,8 +85,8 @@
                     <li><a href="{% url 'app:about' %}">About</a></li>
                     <li><a href="{% url 'app:package' %}">Packages</a></li>
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
-                    <li><a href="{% url 'app:insurance' %}">Insurance</a></li>
                     <li><a href="{% url 'app:contact' %}">Contact</a></li>
+                       <li><a href="{% url 'app:logout' %}">Logout</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
