--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -64,25 +64,14 @@
                     <li><a href="{% url 'app:about' %}">About</a></li>
                     <li><a href="{% url 'app:package' %}">Packages</a></li>
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
-                    <li><a href="{% url 'app:insurance' %}">Insurance</a></li>
                     <li class="menu-has-children"><a href="">Blog</a>
 {#                        <ul>#}
 {#                            <li><a href="{% url 'app:blog-home'  %}">Blog Home</a></li>#}
 {#                            <li><a href="{% url 'app:blog-single' %}">Blog Single</a></li>#}
 {#                        </ul>#}
                     </li>
-                    <li class="menu-has-children"><a href="">Pages</a>
-                        <ul>
-                            <li><a href="elements.html">Elements</a></li>
-                            <li class="menu-has-children"><a href="">Level 2 </a>
-                                <ul>
-                                    <li><a href="#">Item One</a></li>
-                                    <li><a href="#">Item Two</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="payment.html">Payment</a></li>
                      <li><a href="{% url 'app:logout' %}">Logout</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
