register module completed

--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -33,6 +33,8 @@
             </div>
             <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Login</button>
         </form>
+        <p style="color: white;font-weight:600">Don't have an account ?</p>
+        <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase"><a style="color: white" href="{% url 'app:register_page' %}"> SIGN UP</a></button>
     </div>
 </div>
 {% endblock %}
