--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -3,7 +3,7 @@
     <div class="banner-area" style="padding: 100px; margin: fill">
         <div class="relative text-white container">
 
-            <form method="POST">
+            <button method="POST">
                 {% csrf_token %}
                 {% include 'app/messages.html' %}
                 <div class="banner-left" style="text-align: center">
@@ -30,7 +30,7 @@
                     <label for="exampleInputPassword1" class="form-label">Password</label>
                     <input type="password" name="password" required class="form-control" id="exampleInputPassword1">
                 </div>
-                <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Register</button>
+                < type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Register</button>
             </form>
         </div>
     </div>
