--- a/app/templates/app/payment.html
+++ b/app/templates/app/payment.html
@@ -113,7 +113,7 @@
               <!--<div class="col-50">-->
 
                 <label for="cvv">CVV</label><br>
-                <input type="text" id="cvv" name="cvv" placeholder="352"><br>
+                <input type="text" id="cvv" name="cvv" placeholder="XXX"><br>
                       <br>
 
       </div>
