--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -37,17 +37,8 @@
             <div class="row align-items-center">
                 <div>
                     <ul>
-                        <li><a href="#">Visit us</a></li>
-                        <li><a href="#">Buy Tickets</a></li>
+                        <li><a href="{% url 'app:package' %}">View the packages Directly</a></li>
                     </ul>
-                </div>
-                <div class="col-lg-6 col-sm-6 col-6 header-top-right">
-                    <div class="header-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                    </div>
                 </div>
             </div>
         </div>
