Hotel City and Province Added

--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -65,7 +65,7 @@
                                     </span>
                                 </h4>
                                 <p>
-                                    49 Reviews
+                                    {{ hotel_obj.hotel_city }}, {{ hotel_obj.hotel_provinvce }}
                                 </p>
                                 <ul class="package-list">
                                     <li class="d-flex justify-content-between align-items-center">
