Request Custom Price

--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -109,7 +109,7 @@
                         standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on
                         the job is beyond reproach. inappropriate behavior is often laughed.
                     </p>
-                    <a href="#" class="primary-btn text-uppercase">request custom price</a>
+                    <a href="{%  url 'app:contact' %}" class="primary-btn text-uppercase">request custom price</a>
                 </div>
                 <div class="col-lg-6 col-md-12 home-about-right no-padding">
                     <img class="img-fluid" src="/staticfiles/img/hotels/about-img.jpg" alt="">
