--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -130,7 +130,7 @@
                                     </li>
                                     <li class="d-flex justify-content-between align-items-center">
                                         <span>Price per person</span>
-                                        <a href="{% url 'app:booking'  %}" class="price-btn">${{ package_obj.package_price }}</a>
+                                        <a href="{% url 'app:booking' package_obj.uuid %}" class="price-btn">${{ package_obj.package_price }}</a>
                                     </li>
                                 </ul>
                             </div>
