forgot password completed

--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -35,7 +35,7 @@
                <p style="color: white;font-weight:600">Don't have an account ? Create one <a style="color: darkblue" href="{% url 'app:register_page' %}">here</a></p>
             <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Login</button>
         </form>
-        <p><a href="{% url 'app:passwordreset' %}"  style="color: white;font-weight: 500;">Forgot password?</a></p>
+        <p><a href="{% url 'app:password_reset' %}"  style="color: white;font-weight: 500;">Forgot password?</a></p>
     </div>
 </div>
 {% endblock %}
