--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -77,6 +77,7 @@
                     <li><a href="{% url 'app:package' %}">Packages</a></li>
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
                     <li><a href="{% url 'app:contact' %}">Contact</a></li>
+                    <li><a href="{% url 'app:users-profile' %}">User Profile</a></li>
                        <li><a href="{% url 'app:logout' %}">Logout</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
