--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -15,9 +15,9 @@
             </div>
         </div>
     </section>
-    <section class="container contact-page-area section-gap">
-        <div class="row my-3 p-3">
-            <h1>This is the profile page for {{ user.username }}</h1>
+    <section class="container-fluid contact-page-area section-gap">
+        <div class=" display-2 row my-3 p-3">
+            <h1>Hello, {{ user.username }}</h1>
         </div>
         <div class="row my-3 p-3">
             <h1>This is the profile page for {{ user.email }}</h1>
