--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -20,7 +20,7 @@
             <h1>Hello, {{ user.username }}</h1>
         </div>
         <div class="row my-3 p-3">
-            <h1>This is the profile page for {{ user.email }}</h1>
+            <h1>email id: {{ user.email }}</h1>
         </div>
     </section>
 {% endblock %}
