Contact US Template

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -95,9 +95,9 @@
 
             <div class="row">
                     <div class="single-footer-widget">
-                        <h6>About Agency</h6>
+                        <h6>About Travelohilic</h6>
                         <p>
-                            The world has become so fast paced that people don’t want to stand by reading a page of
+                            The world has become so fast-paced that people don’t want to stand by reading a page of
                             information, they would much rather look at a presentation and understand the message. It
                             has come to a point
                         </p>
