--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -32,9 +32,9 @@
                             <span class="lnr lnr-home"></span>
                         </div>
                         <div class="contact-details">
-                            <h5>Binghamton, New York</h5>
+                            <h5>Windsor, Ontario, Canada</h5>
                             <p>
-                                4343 Hinkle Deegan Lake Road
+                                123 Ferry St
                             </p>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                             <span class="lnr lnr-phone-handset"></span>
                         </div>
                         <div class="contact-details">
-                            <h5>00 (958) 9865 562</h5>
+                            <h5>+1 (123) 123-123</h5>
                             <p>Mon to Fri 9am to 6 pm</p>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                             <span class="lnr lnr-envelope"></span>
                         </div>
                         <div class="contact-details">
-                            <h5>support@colorlib.com</h5>
+                            <h5>support@traveloholic.com</h5>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
